@@ -57,8 +57,8 @@ class vlad_mapper : public vlad_mem
 
     /* given the state, truth value and indices, map a subst fact into an id */
     unsigned int compute_subst(unsigned char a_type,
-                               unsigned char a_grp1,
-                               unsigned char a_grp2,
+                               unsigned int a_grp1,
+                               unsigned int a_grp2,
                                unsigned a_state,
                                bool a_truth);
 
